--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #F56600;
   text-decoration: none;
 }
 
@@ -88,8 +88,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #F56600;
+  border-color: #F56600;
 }
 
 .card h2 {
